add support for new modals